--- a/Tanimoto.ipynb
+++ b/Tanimoto.ipynb
@@ -26,20 +26,20 @@
     "mass_data = []\n",
     "mol_num = []\n",
     "formula = []\n",
-    "labels = []  # ラベルを保持するリストを初期化\n",
+    "labels = []  # Initialize the list to store labels\n",
     "\n",
     "for file in glob.glob(path_txt):\n",
     "    with open(file, 'r') as f:\n",
     "        lines = f.readlines()\n",
     "        if len(lines) >= 6:\n",
     "            sdbs = lines[0].strip()  #SDBS No.\n",
-    "            text = lines[1].strip()  # IUPAC名\n",
+    "            text = lines[1].strip()  # IUPAC name\n",
     "            inchi = lines[2].strip() #InChI\n",
-    "            mol = lines[3].strip()   # 分子式\n",
-    "            mass = float(lines[4].strip())  # 分子量\n",
+    "            mol = lines[3].strip()   # Molecular formula\n",
+    "            mass = float(lines[4].strip())  # Molecular weight\n",
     "            cas = lines[5].strip()  #CAS No.\n",
     "\n",
-    "            # InChIのフォーマットを確認し、\"InChI=\"が抜けている場合は追加する\n",
+    "            # Check the format of InChI and add "InChI=" if missing\n",
     "            if not inchi.startswith(\"InChI=\"):\n",
     "                inchi = \"InChI=\" + inchi\n",
     "\n",
@@ -48,16 +48,16 @@
     "            mol_data.append(mol)\n",
     "            mass_data.append(mass)\n",
     "            \n",
-    "            # ファイル名からラベルを抽出してリストに追加する\n",
+    "            # Extract the label from the filename and add it to the list\n",
     "            label = os.path.basename(file).split(\".\")[0]\n",
     "            labels.append(label)\n",
     "\n",
-    "# 化合物の数\n",
-    "inchi_list = inchi_data  # InChIのリスト\n",
+    "# Number of compounds\n",
+    "inchi_list = inchi_data  # List of InChI\n",
     "\n",
     "num_compounds = len(inchi_list)\n",
     "\n",
-    "# InChIからRDKitの分子オブジェクトのリストを生成\n",
+    "# Generate a list of RDKit molecule objects from InChI\n",
     "molecules = []\n",
     "for i, inchi in enumerate(inchi_list):\n",
     "    try:\n",
@@ -70,25 +70,25 @@
     "        print(f\"Error in processing InChI: {inchi} (file: {glob.glob(path_txt)[i]})\")\n",
     "        print(f\"Error message: {str(e)}\")\n",
     "\n",
-    "# 分子のフィンガープリントを生成\n",
+    "# Generate molecular fingerprints\n",
     "fingerprints = [Chem.RDKFingerprint(mol) for mol in molecules]\n",
     "\n",
-    "# Tanimoto係数を計算し、結果を格納する行列を初期化\n",
+    "# Initialize a matrix to store Tanimoto coefficients\n",
     "similarity_matrix = [[0.0] * num_compounds for _ in range(num_compounds)]\n",
     "\n",
-    "# 化合物のペアごとにTanimoto係数を計算\n",
+    "# Calculate Tanimoto coefficients for all pairs of compounds\n",
     "for i in range(num_compounds):\n",
     "    for j in range(i+1, num_compounds):\n",
     "        similarity = FingerprintSimilarity(fingerprints[i], fingerprints[j])\n",
     "        similarity_matrix[i][j] = similarity\n",
     "        similarity_matrix[j][i] = similarity\n",
     "\n",
-    "# 結果の出力\n",
+    "# Output the results\n",
     "for i in range(num_compounds):\n",
     "    for j in range(num_compounds):\n",
     "        label_i = os.path.splitext(os.path.basename(glob.glob(path_txt)[i]))[0]\n",
     "        label_j = os.path.splitext(os.path.basename(glob.glob(path_txt)[j]))[0]\n",
-    "        #print(f\"Tanimoto係数({label_i}, {label_j}):\", similarity_matrix[i][j])\n",
+    "        #print(f\"Tanimoto coefficient({label_i}, {label_j}):\", similarity_matrix[i][j])\n",
     "\n",
     "# Specify the list of compounds you want to compare\n",
     "target_compounds = [\"XXXX\", \"XXXX\", \"XXXX\", \"XXXX\", \"XXXX\"]\n",
@@ -106,7 +106,7 @@
     "        # Calculate Tanimoto coefficient for the pair\n",
     "        similarity = FingerprintSimilarity(fingerprints[index_i], fingerprints[index_j])\n",
     "\n",
-    "        print(f\"Tanimoto係数({label_i}, {label_j}):\", similarity)"
+    "        print(f\"Tanimoto coefficient({label_i}, {label_j}):\", similarity)"
    ]
   }
  ],
