--- a/Tanimoto.ipynb
+++ b/Tanimoto.ipynb
@@ -39,7 +39,7 @@
     "            mass = float(lines[4].strip())  # Molecular weight\n",
     "            cas = lines[5].strip()  #CAS No.\n",
     "\n",
-    "            # Check the format of InChI and add "InChI=" if missing\n",
+    "            # Check the format of InChI and add InChI= if missing\n",
     "            if not inchi.startswith(\"InChI=\"):\n",
     "                inchi = \"InChI=\" + inchi\n",
     "\n",
