--- a/Scaled.ipynb
+++ b/Scaled.ipynb
@@ -29,10 +29,10 @@
     "        lines = f.readlines()\n",
     "        if len(lines) >= 6:\n",
     "            sdbs = lines[0].strip()  #SDBS No.\n",
-    "            text = lines[1].strip()  # IUPAC名\n",
+    "            text = lines[1].strip()  # IUPAC name\n",
     "            inchi = lines[2].strip() #InChI\n",
-    "            mol = lines[3].strip()   # 分子式\n",
-    "            mass = float(lines[4].strip())  # 分子量\n",
+    "            mol = lines[3].strip()   # Molecular formula\n",
+    "            mass = float(lines[4].strip())  # Molecular weight\n",
     "            cas = lines[5].strip()  #CAS No.\n",
     "            \n",
     "            \n",
@@ -41,31 +41,31 @@
     "            mol_data.append(mol)\n",
     "            mass_data.append(mass)\n",
     "            \n",
-    "# CountVectorizerにより、IUPAC名を特徴ベクトルに変換\n",
+    "# Convert IUPAC names to feature vectors using CountVectorizer\n",
     "vectorizer = CountVectorizer()\n",
     "X = vectorizer.fit_transform(text_data)\n",
     "\n",
-    "# 学習結果をファイルに保存\n",
+    "# Save the trained vectorizer to a file\n",
     "with open(\"vectorizer.pkl\", \"wb\") as f:\n",
     "    pickle.dump(vectorizer, f)\n",
     "\n",
     "\n",
-    "# CountVectorizerにより、IUPAC名を特徴ベクトルに変換\n",
+    "# Convert IUPAC names to feature vectors using CountVectorizer\n",
     "vectorizer = CountVectorizer()\n",
     "X = vectorizer.fit_transform(text_data)\n",
     "\n",
-    "# 学習結果をファイルに保存\n",
+    "# Save the trained vectorizer to a file\n",
     "with open(\"vectorizer.pkl\", \"wb\") as f:\n",
     "    pickle.dump(vectorizer, f)\n",
     "\n",
-    "# NumPy配列に変換\n",
+    "# Convert the feature matrix to a NumPy array\n",
     "X_text = X.toarray()\n",
     "\n",
-    "# 各元素の原子量を定義する\n",
+    "# Define atomic weights for various elements\n",
     "atomic_weights = {'C': 12, 'H': 1, 'O': 16, 'N': 14, 'S': 32, 'Cl': 35.5, 'Li': 7, 'Cu':63.6, 'Co': 58.9, 'Br': 79.9, 'F': 19, 'B': 10.8}\n",
     "\n",
     "def calculate_mole_fraction(formula):\n",
-    "    # 化学式を構成する元素とその数を辞書形式で取得する\n",
+    "    # Parse the chemical formula to get elements and their counts\n",
     "    elements = {}\n",
     "    for i in range(len(formula)):\n",
     "        if formula[i].isupper():\n",
@@ -82,35 +82,35 @@
     "            count = int(formula[i])\n",
     "            elements[element] = count\n",
     "    \n",
-    "    # 辞書に含まれる元素について、化学式に含まれている場合はその数を、そうでない場合は0を追加する\n",
+    "    # Add elements with count 0 if they are not present in the formula\n",
     "    for element in atomic_weights.keys():\n",
     "        if element not in elements.keys():\n",
     "            elements[element] = 0\n",
     "    \n",
-    "    # 元素の数をもとに、各元素のモル分数を計算する\n",
+    "    # Calculate mole fractions based on element counts\n",
     "    total_weight = sum(elements[element] * atomic_weights[element] for element in elements)\n",
     "    mole_fractions = {element: (elements[element] * atomic_weights[element]) / total_weight for element in elements}\n",
     "    \n",
     "    return mole_fractions\n",
     "\n",
     "\n",
-    "#mfに格納\n",
+    "#Store the mole fractions\n",
     "formula.extend(mol_data)\n",
     "mf = []\n",
     "for i in range(len(formula)):\n",
     "    mole_fractions = calculate_mole_fraction(formula[i])\n",
     "    mf.append(list(mole_fractions.values()))\n",
     "\n",
-    "# NumPy配列に変換\n",
+    "# Convert mole fractions to a NumPy array\n",
     "X_mol = np.array(mf)\n",
     "\n",
-    "#分子量データをデータセットに追加\n",
+    "#Add molecular weight data to the dataset\n",
     "X_mass = np.array(mass_data)\n",
     "\n",
-    "# NumPy配列に変換\n",
+    "# Reshape molecular weight data\n",
     "X_mass = np.array(X_mass).reshape(-1, 1)\n",
     "    \n",
-    "#画像ファイルを読み込んでデータセットに追加\n",
+    "#Read image files and add to the dataset\n",
     "path_img = \"D:/ML/IR_test/fig/resize/fig/*.jpg\"\n",
     "image_data = []\n",
     "for file in glob.glob(path_img):\n",
@@ -120,21 +120,21 @@
     "    image_data.append(image_array)\n",
     "    \n",
     "\n",
-    "# テキストデータと画像データを関連付けるために、ファイル名を比較してインデックスを取得\n",
+    "# Match text and image data by comparing filenames to get indices\n",
     "index_data = []\n",
     "for file in glob.glob(path_txt):\n",
     "    filename = os.path.basename(file)\n",
     "    index = int(filename.split('.')[0])\n",
     "    index_data.append(index)\n",
     "\n",
-    "#データセットをNumPy配列に変換\n",
+    "#Convert index data to a NumPy array\n",
     "X_index = np.array(index_data).reshape(-1, 1)\n",
     "X_image = np.array(image_data)\n",
     "X_image = X_image.reshape(X_image.shape[0], -1)\n",
     "\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
-    "# 特徴量ごとにスケーリングを行う\n",
+    "# Scale features for each dataset\n",
     "scaler = MinMaxScaler()\n",
     "X_text_scaled = scaler.fit_transform(X_text)\n",
     "X_mol_scaled = scaler.fit_transform(X_mol)\n",
@@ -148,7 +148,7 @@
     "X_zero = np.zeros((len(X.toarray()), num_of_new_columns))\n",
     "X_new = np.concatenate((X.toarray(), X_zero), axis=1)\n",
     "\n",
-    "# 全ての特徴量を連結\n",
+    "# Define the number of new columns to add\n",
     "#X = np.hstack((X_new, X_image))\n",
     "X = np.hstack((X_mol_scaled, X_mass_scaled, X_image_scaled))\n",
     "X = X.astype(np.float64)\n",
