--- a/IR_image_anlysis.ipynb
+++ b/IR_image_anlysis.ipynb
@@ -16,50 +16,50 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.cluster.hierarchy import linkage, dendrogram\n",
     "\n",
-    "# 画像データのパス\n",
+    "# Path to the image data\n",
     "path_img = \"D:/ML/IR_test/cropped_images_test/*.gif\"\n",
     "image_data = []\n",
     "\n",
-    "# 画像データを読み込んでリストに追加\n",
+    "# Load image data and add to the list\n",
     "for file in glob.glob(path_img):\n",
-    "    # GIF ファイルを Pillow を使用して読み込む\n",
+    "    # Open GIF file using Pillow\n",
     "    with Image.open(file) as img:\n",
-    "        # グレースケールに変換\n",
+    "        # Convert to grayscale\n",
     "        img_gray = img.convert('L')\n",
-    "        # NumPy 配列に変換してデータセットに追加\n",
+    "        # Convert to NumPy array and add to dataset\n",
     "        image_array = np.array(img_gray)\n",
     "        image_data.append(image_array)\n",
     "\n",
-    "# データセットを NumPy 配列に変換\n",
+    "# Convert the dataset to a NumPy array\n",
     "X_image = np.array(image_data)\n",
     "\n",
-    "# テキストデータと画像データを関連付けるために、ファイル名を比較してインデックスを取得\n",
+    "# Obtain indices for each file based on filenames\n",
     "index_data = []\n",
     "for file in glob.glob(path_txt):\n",
     "    filename = os.path.basename(file)\n",
     "    index = int(filename.split('.')[0])\n",
     "    index_data.append(index)\n",
     "\n",
-    "# ファイル名からインデックスを取得してNumPy配列に変換\n",
+    "# Convert index data to NumPy array\n",
     "X_index = np.array(index_data).reshape(-1)\n",
     "\n",
-    "# 画像データの形状を表示\n",
-    "print(\"画像データの形状:\", X_image.shape)\n",
+    "# Display the shape of the image data\n",
+    "print(\"Shape of image data:\", X_image.shape)\n",
     "\n",
-    "# 階層的クラスタリングを実行\n",
+    "# Perform hierarchical clustering\n",
     "Z = linkage(X_image.reshape(X_image.shape[0], -1), method='ward', metric='euclidean')\n",
     "\n",
-    "# デンドログラムを描画\n",
+    "# Plot dendrogram\n",
     "fig = plt.figure(figsize=(50, 10), dpi=300)\n",
     "dn = dendrogram(Z, labels=X_index)\n",
     "\n",
-    "# x軸ラベルのフォントサイズを変更\n",
+    "# Change font size for x-axis label\n",
     "plt.xlabel('SDBS No.', fontsize=20)\n",
     "\n",
-    "# y軸ラベルのフォントサイズを変更\n",
+    "# Change font size for y-axis label\n",
     "plt.ylabel('Distance', fontsize=20)\n",
     "\n",
-    "# x軸の目盛りのフォントサイズを変更\n",
+    "# Change font size for x-axis ticks\n",
     "plt.xticks(fontsize=15)\n",
     "\n",
     "plt.show()\n"
